--- a/angular.json
+++ b/angular.json
@@ -22,7 +22,12 @@
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css", "node_modules/bootstrap/dist/css/bootstrap.min.css"],
+            "styles": [
+              "src/styles.css",
+              "node_modules/bootstrap/dist/css/bootstrap.min.css",
+              "node_modules/flag-icon-css/css/flag-icons.min.css"
+
+            ],
             "scripts": []
           },
           "configurations": {
