--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@angular/router": "^15.2.0",
     "@ng-select/ng-select": "^10.0.4",
     "bootstrap": "^5.3.3",
+    "flag-icon-css": "^4.1.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
@@ -47,6 +48,7 @@
     "@angular-eslint/template-parser": "15.2.1",
     "@angular/cli": "~15.2.6",
     "@angular/compiler-cli": "^15.2.0",
+    "@types/dotenv-webpack": "^7.0.7",
     "@types/jest": "^29.5.12",
     "@types/mocha": "^10.0.7",
     "@types/node": "^22.5.4",
