--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve --open",
-    "build": "ng build",
+    "build": "ng build --prod",
     "watch": "ng build --watch --configuration development",
     "test": "jest",
     "test-watch": "jest --watch",
@@ -17,7 +17,7 @@
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 15.2.6.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/semklim/country-holidays"
+    "url": "https://github.com/semklim/Country-Holidays"
   },
   "author": "Roman Klymashenko <romanklimashenko@gmail.com> (https://github.com/semklim)",
   "license": "MIT",
