--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,14 @@
 {
   "root": true,
-  "ignorePatterns": ["projects/**/*", "src/setup.jest.ts"],
+  "ignorePatterns": [
+    "projects/**/*",
+    "src/setup.jest.ts"
+  ],
   "overrides": [
     {
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "parserOptions": {
         "project": [
           "tsconfig.*?.json"
@@ -11,12 +16,13 @@
         ],
         "createDefaultProgram": true
       },
-      "plugins": ["prettier"],
+      "plugins": [
+        "prettier"
+      ],
       "extends": [
         "plugin:@angular-eslint/recommended",
-        // Стайл гайд AirBnB
+        // Style guid AirBnB
         "airbnb-typescript/base",
-        // Настройки для Prettier
         "plugin:prettier/recommended",
         "plugin:import/recommended",
         "plugin:import/typescript"
@@ -30,8 +36,16 @@
         "prettier/prettier": [
           "error",
           {
-            "endOfLine": "auto",
-            "arrowParens": "always"
+            "trailingComma": "all",
+            "useTabs": false,
+            "tabWidth": 2,
+            "semi": true,
+            "singleQuote": true,
+            "printWidth": 80,
+            "bracketSpacing": true,
+            "arrowParens": "always",
+            "bracketSameLine": true,
+            "endOfLine": "auto"
           }
         ],
         "arrow-body-style": [
@@ -45,13 +59,19 @@
       }
     },
     {
-      "plugins": ["jest"],
+      "plugins": [
+        "jest"
+      ],
       "env": {
         "jest/globals": true
       },
-      "files": ["*.ts"],
+      "files": [
+        "*.ts"
+      ],
       "parserOptions": {
-        "project": ["tsconfig.*?.json"],
+        "project": [
+          "tsconfig.*?.json"
+        ],
         "createDefaultProgram": true
       },
       "extends": [
@@ -64,9 +84,15 @@
       "settings": {
         "jest": {
           "globalAliases": {
-            "describe": ["context"],
-            "fdescribe": ["fcontext"],
-            "xdescribe": ["xcontext"]
+            "describe": [
+              "context"
+            ],
+            "fdescribe": [
+              "fcontext"
+            ],
+            "xdescribe": [
+              "xcontext"
+            ]
           }
         }
       },
@@ -77,7 +103,6 @@
         "jest/no-identical-title": "error",
         "jest/prefer-to-have-length": "warn",
         "jest/valid-expect": "error",
-
         "@angular-eslint/directive-selector": [
           "error",
           {
@@ -97,8 +122,12 @@
       }
     },
     {
-      "files": ["*.html"],
-      "extends": ["plugin:@angular-eslint/template/recommended"],
+      "files": [
+        "*.html"
+      ],
+      "extends": [
+        "plugin:@angular-eslint/template/recommended"
+      ],
       "rules": {
         // "max-len": ["error", { "code": 140 }]
       }
