--- a/angular.json
+++ b/angular.json
@@ -21,12 +21,11 @@
             "main": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/assets", "src/robots.txt"],
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/flag-icon-css/css/flag-icons.min.css"
-
+              "node_modules/flag-icons/css/flag-icons.min.css"
             ],
             "scripts": []
           },
