--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,7 +3,13 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": ["jest"]
+    "types": ["jest"],
+    "baseUrl": "./",
+    "paths": {
+      "src/*": [
+        "src/*"
+      ]
+    }
   },
   "files": ["src/setup.jest.ts"],
   "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
